Fixed stretched developer logo on the listings

--- a/resources/assets/sass/components/MediaQueries.scss
+++ b/resources/assets/sass/components/MediaQueries.scss
@@ -27,4 +27,10 @@
 		}
 	}
 
+	.owl-wrapper {
+		.owl-item {
+			margin: 0px;
+		}
+	}
+
 }
